# dzeventBackend

./: .gitignore  pyproject.toml
dzbackend/: celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  db.sqlite3  manage.py  requirements.txt
dzbackend/associations/: urls.py  views.py
dzbackend/core/: supabase_client.py
dzbackend/dzbackend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
dzbackend/events/: tasks.py  urls.py  views.py
dzbackend/followers/: urls.py  views.py
dzbackend/interests/: apps.py  urls.py  views.py
dzbackend/supabase/: config.toml
dzbackend/supabase/functions/notify-close-events/: index.ts
dzbackend/supabase/functions/signal-created-event/: index.ts
dzbackend/users/: urls.py  views.py
test/: rest_client.http
